@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods


class Organization {
    name
    vatNumber
    website
    phoneNumber
    email
}

class Vehicle {
    plate number
    brand
    type
    model
    current km
    checkup frequency
    km at last checkup
}

class Checkup {
    current vehicle km
    vehicle plate number
}

class FleetManager {
    name
    email
    phone
}

class Collaborator {
    name
    birthdate
    admission date
    address
    email
    phone
}

Organization "1" - "*" Collaborator : has >
Organization "1" - "1" FleetManager : has >
Organization "1" - "*" Vehicle: owns >
Vehicle "1" - "*" Checkup: undergoes >
Collaborator "1" -- "0..*" Vehicle : uses >
FleetManager "1" -- "*" Vehicle : maintains >

@enduml